--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,7 @@ jobs:
   # This workflow contains a single job called "build"
   run:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -25,6 +25,4 @@ jobs:
 
       - name: Run a multi-line script
         run: |
-          curl -o mcc "https://github.com/MCCTeam/Minecraft-Console-Client/releases/download/20241227-281/MinecraftClient-20241227-281-linux-arm"
-          chmod 777 ./mcc
-          ./mcc
+          .\mcc
