--- a/MinecraftClient.ini
+++ b/MinecraftClient.ini
@@ -1,7 +1,7 @@
 [Main]
 [Main.General]
-Account = { Login = "", Password = "-" }     # Login=Email or Name. Use "-" as password for offline mode. Leave blank to prompt user on startup.
-Server = { Host = "qimuyun.top" }                      # The address of the game server, "Host" can be filled in with domain name or IP address. (The "Port" field can be deleted, it will be resolved automatically)
+Account = { Login = "leitingrenji", Password = "-" }     # Login=Email or Name. Use "-" as password for offline mode. Leave blank to prompt user on startup.
+Server = { Host = "wdsj.net" }                      # The address of the game server, "Host" can be filled in with domain name or IP address. (The "Port" field can be deleted, it will be resolved automatically)
 AccountType = "microsoft"                   # Account type: "mojang" OR "microsoft". Also affects interactive login in console.
 Method = "mcc"                              # Microsoft Account sign-in method: "mcc" OR "browser". If the login always fails, please try to use the "browser" once.
 
@@ -9,9 +9,9 @@ Method = "mcc"                              # Microsoft Account sign-in method: 
 [Main.Advanced]
 InternalCmdChar = "slash"                   # Use "none", "slash"(/) or "backslash"(\).
 MessageCooldown = 1.0                       # Controls the minimum interval (in seconds) between sending each message to the server.
-MinecraftVersion = "1.20.1"                   # Use "auto" or "1.X.X" values. Allows to skip server info retrieval.
+MinecraftVersion = "1.8.9"                   # Use "auto" or "1.X.X" values. Allows to skip server info retrieval.
 EnableForge = "no"                          # Use "auto", "no" or "force". Force-enabling only works for MC 1.13+.
-BrandInfo = "mcc"                           # Use "mcc", "vanilla" or "none". This is how MCC identifies itself to the server.
+BrandInfo = "vanilla"                           # Use "mcc", "vanilla" or "none". This is how MCC identifies itself to the server.
 ChatbotLogFile = ""                         # Leave empty for no logfile.
 PrivateMsgsCmdName = "tell"                 # For remote control of the bot.
 ShowSystemMessages = true                   # System messages for server ops.
@@ -67,7 +67,7 @@ SaveColorCodes = false                      # Keep color codes in the saved text
 
 [Console]
 [Console.General]
-ConsoleColorMode = "vt100_24bit"            # Use "disable", "legacy_4bit", "vt100_4bit", "vt100_8bit" or "vt100_24bit". If a garbled code like "←[0m" appears on the terminal, you can try switching to "legacy_4bit" mode, or just disable it.
+ConsoleColorMode = "legacy_4bit"            # Use "disable", "legacy_4bit", "vt100_4bit", "vt100_8bit" or "vt100_24bit". If a garbled code like "←[0m" appears on the terminal, you can try switching to "legacy_4bit" mode, or just disable it.
 Display_Input = true                        # You can use "Ctrl+P" to print out the current input and cursor position.
 History_Input_Records = 32                  # Console.General.History_Input_Records
 
@@ -127,10 +127,10 @@ Pants_Right = false
 # Automatically relog when disconnected by server, for example because the server is restating
 # /!\ Use Ignore_Kick_Message=true at own risk! Server staff might not appreciate if you auto-relog on manual kicks
 [ChatBot.AutoRelog]
-Enabled = false
+Enabled = true
 Delay = { min = 3.0, max = 3.0 }            # The delay time before joining the server. (in seconds)
 Retries = 3                                 # Retries when failing to relog to the server. use -1 for unlimited retries.
-Ignore_Kick_Message = false                 # When set to true, autorelog will reconnect regardless of kick messages.
+Ignore_Kick_Message = true                 # When set to true, autorelog will reconnect regardless of kick messages.
 # If the kickout message matches any of the strings, then autorelog will be triggered.
 Kick_Messages = [ "Connection has been lost", "Server is restarting", "Server is full", "Too Many people", ]
 
