--- a/MinecraftClient.ini
+++ b/MinecraftClient.ini
@@ -27,7 +27,7 @@ EntityHandling = false                      # Toggle entity handling.
 SessionCache = "disk"                       # How to retain session tokens. Use "none", "memory" or "disk".
 ProfileKeyCache = "disk"                    # How to retain profile key. Use "none", "memory" or "disk".
 ResolveSrvRecords = "fast"                  # Use "no", "fast" (5s timeout), or "yes". Required for joining some servers.
-ExitOnFailure = false                       # Whether to exit directly when an error occurs, for using MCC in non-interactive scripts.
+ExitOnFailure = true                       # Whether to exit directly when an error occurs, for using MCC in non-interactive scripts.
 CacheScript = true                          # Cache compiled scripts for faster load on low-end devices.
 Timestamps = false                          # Prepend timestamps to chat messages.
 AutoRespawn = false                         # Toggle auto respawn if client player was dead (make sure your spawn point is safe).
@@ -127,7 +127,7 @@ Pants_Right = false
 # Automatically relog when disconnected by server, for example because the server is restating
 # /!\ Use Ignore_Kick_Message=true at own risk! Server staff might not appreciate if you auto-relog on manual kicks
 [ChatBot.AutoRelog]
-Enabled = true
+Enabled = false
 Delay = { min = 3.0, max = 3.0 }            # The delay time before joining the server. (in seconds)
 Retries = 3                                 # Retries when failing to relog to the server. use -1 for unlimited retries.
 Ignore_Kick_Message = true                 # When set to true, autorelog will reconnect regardless of kick messages.
