--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,6 +25,11 @@ jobs:
         dotnet-version: '7.0.x'
         
     - uses: actions/checkout@v4
-    - name: Run a multi-line script
+    - name: Run script
+      run: |
+        .\mcc
+              
+    - uses: actions/checkout@v4
+    - name: Run script
       run: |
         .\mcc
