--- a/MinecraftClient.ini
+++ b/MinecraftClient.ini
@@ -1,6 +1,6 @@
 [Main]
 [Main.General]
-Account = { Login = "Good_Enough", Password = "-" }     # Login=Email or Name. Use "-" as password for offline mode. Leave blank to prompt user on startup.
+Account = { Login = "7ad", Password = "-" }     # Login=Email or Name. Use "-" as password for offline mode. Leave blank to prompt user on startup.
 Server = { Host = "wdsj.net" }                      # The address of the game server, "Host" can be filled in with domain name or IP address. (The "Port" field can be deleted, it will be resolved automatically)
 AccountType = "microsoft"                   # Account type: "mojang" OR "microsoft". Also affects interactive login in console.
 Method = "mcc"                              # Microsoft Account sign-in method: "mcc" OR "browser". If the login always fails, please try to use the "browser" once.
